...
        android:layout_height="24dp"
        android:layout_marginHorizontal="50dp"
        android:text="Wellcome to Quick Cash"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/signupname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="Your full name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/signupemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="Your email address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/signupPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="New password"
...
            android:layout_height="wrap_content"
            android:text="I am the Employer"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/employee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:duplicateParentState="true"
            android:focusable="auto"
            android:text="I am the Employee"
            android:textSize="15sp"
            android:visibility="visible" />
    </RadioGroup>


    <Button
        android:id="@+id/signupFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/log_btn_dsgn"
        android:text="Get Start!"
...
